--- a/Exercise-01/01_Pengantar Praktikum.ipynb
+++ b/Exercise-01/01_Pengantar Praktikum.ipynb
@@ -21,13 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "#  <<<<< Klik button play di samping kiri untuk menjalankannya\n",
     "# Ketikkan print(\"Hello World\") di baris selanjutnya ↓↓↓\n",
-    "\n"
+    "print(\"Hello World\")\n"
    ]
   },
   {
@@ -40,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "# <<< Klik play untuk menjalankan kode di bawah\n",
     "print(str(input(\"Ketikkan Pesan: \")))"
@@ -85,11 +101,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   "hash": "6676aab5119a8ec17ef6e97ecffbebf8a9ecb53431f85f1522d9e3200bda138a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -102,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
