--- a/Exercise-02/02_TipeDataDanVariabelDanMembuatInputData.ipynb
+++ b/Exercise-02/02_TipeDataDanVariabelDanMembuatInputData.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
       "Nama panggilan saya adalah Ghaylan\n",
       "Umur saya saat ini adalah 18\n",
       "Tipe data variabel _umur adalah <class 'int'>\n",
-      "Umur saya saat ini adalah Sembilan Belas\n",
+      "Umur saya saat ini adalah Delapan Belas\n",
       "Tipe data variabel _umur adalah <class 'str'>\n",
       "Tinggi badan saya adalah 175.5\n",
       "Tipe data variabel tinggi_badan adalah <class 'float'>\n",
@@ -46,7 +46,7 @@
     "_umur = 18\n",
     "print(\"Umur saya saat ini adalah\", _umur) #mencetak nilai umur\n",
     "print(\"Tipe data variabel _umur adalah\", type(_umur))\n",
-    "_umur = \"Sembilan Belas\"\n",
+    "_umur = \"Delapan Belas\"\n",
     "print(\"Umur saya saat ini adalah\", _umur)\n",
     "print(\"Tipe data variabel _umur adalah\", type(_umur))\n",
     "tinggi_badan = 175.5\n",
