--- a/Exercise-03/03_Tipe Data Koleksi.ipynb
+++ b/Exercise-03/03_Tipe Data Koleksi.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Nama Lengkap: Naufal Ghaylan Arya Putra\n",
-      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Musik', 'prodi': 'Teknik Industri'}\n",
+      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Mendengarkan Musik', 'prodi': 'Teknik Industri'}\n",
       "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n",
       "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n"
      ]
@@ -196,7 +196,7 @@
    ],
    "source": [
     "#SILAHKAN ISI CODE RUMPANG BERIKUT SESUAI KONDISI KALIAN\n",
-    "biodata = {'nama_depan':'Naufal Ghaylan','nama_belakang':'Arya Putra','usia':19,'kota_asal':'Solo','hobi':'Musik'}\n",
+    "biodata = {'nama_depan':'Naufal Ghaylan','nama_belakang':'Arya Putra','usia':19,'kota_asal':'Solo','hobi':'Mendengarkan Musik'}\n",
     "print('Nama Lengkap: ' + biodata['nama_depan'] + ' ' + biodata['nama_belakang'])\n",
     "\n",
     "#MENAMBAHKAN KEY&VALUE \"PRODI\" dan \"HOBI\" MASING-MASING\n",
@@ -211,6 +211,7 @@
     "del biodata['kota_asal']\n",
     "print(biodata)\n",
     "\n",
+    "#\n",
     "\n",
     "\n",
     "\n"
