--- a/Exercise-03/03_Tipe Data Koleksi.ipynb
+++ b/Exercise-03/03_Tipe Data Koleksi.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "#SOAL-1\n",
     "#BUATLAH LIST KALIAN DISINI\n",
-    "biodata = [\"Naufal\", \"I0321079\", 19, \"Solo\", \"Musik\"]"
+    "biodata = [\"Naufal\", \"I0321079\", 19, \"Solo\", \"Mendegarkan Musik\"]"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
       "Nim\t: I0321079 \n",
       "USIA\t: 19 \n",
       "Asal\t: Solo \n",
-      "Hobi\t: Musik\n"
+      "Hobi\t: Mendegarkan Musik\n"
      ]
     }
    ],
@@ -82,21 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Naufal', 'I0321079', 19, 'Solo', ['Musik', 'Game', 'Olahraga']]\n"
+      "['Naufal', 'I0321079', 19, 'Solo', ['Musik', 'Game', 'Fotografi']]\n"
      ]
     }
    ],
    "source": [
     "#SOAL-3\n",
     "#TULISKAN KEMBALI KODE DIATAS SESUAI HOBI KALIAN DISINI\n",
-    "biodata[4]= [\"Musik\", \"Game\", \"Olahraga\"]\n",
+    "biodata[4]= [\"Musik\", \"Game\", \"Fotografi\"]\n",
     "print(biodata)"
    ]
   },
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Naufal', 19, 'Solo', ['Musik', 'Game', 'Olahraga']]\n"
+      "['Naufal', 19, 'Solo', ['Musik', 'Game', 'Fotografi']]\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
       "Nama\t: Naufal \n",
       "USIA\t: 19 \n",
       "Asal\t: Solo \n",
-      "Hobi\t: ['Musik', 'Game', 'Olahraga']\n"
+      "Hobi\t: ['Musik', 'Game', 'Fotografi']\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +189,8 @@
      "text": [
       "Nama Lengkap: Naufal Ghaylan Arya Putra\n",
       "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Mendengarkan Musik', 'prodi': 'Teknik Industri'}\n",
-      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n",
-      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n"
+      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'kota_asal': 'Solo', 'hobi': 'Fotografi', 'prodi': 'Teknik Industri'}\n",
+      "{'nama_depan': 'Naufal Ghaylan', 'nama_belakang': 'Arya Putra', 'usia': 19, 'hobi': 'Fotografi', 'prodi': 'Teknik Industri'}\n"
      ]
     }
    ],
@@ -204,14 +204,14 @@
     "print(biodata)\n",
     "\n",
     "#MENGUBAH VALUE PADA SEBUAH DICTIONARY\n",
-    "biodata['hobi'] = 'Game'\n",
+    "biodata['hobi'] = 'Fotografi'\n",
     "print(biodata)\n",
     "\n",
     "#MENGHAPUS SALAH SATU KEY-VALUE PAIRS\n",
     "del biodata['kota_asal']\n",
     "print(biodata)\n",
     "\n",
-    "#\n",
+    "\n",
     "\n",
     "\n",
     "\n"
