--- a/Exercise-03/03_Tipe Data Koleksi.ipynb
+++ b/Exercise-03/03_Tipe Data Koleksi.ipynb
@@ -209,12 +209,7 @@
     "\n",
     "#MENGHAPUS SALAH SATU KEY-VALUE PAIRS\n",
     "del biodata['kota_asal']\n",
-    "print(biodata)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(biodata)"
    ]
   },
   {
