--- a/Exercise-04/04_Operators.ipynb
+++ b/Exercise-04/04_Operators.ipynb
@@ -122,7 +122,7 @@
     "y = 20\n",
     "print('x > 5 and 10 < y is',x>5 and 10 < y) \n",
     "print('x or y more than or equal to 10 is', x>=10 or y>=10)\n",
-    "print('x or y not more than or equal to 10 is',not(x<=10 or y<=10))\n",
+    "print('x or y not more than or equal to 10 is',not(x>=10 or y>=10))\n",
     "\n",
     "%reset -f"
    ]
@@ -328,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lo\n"
+      "fal\n"
      ]
     }
    ],
@@ -346,9 +346,9 @@
     "%reset -f\n",
     "\n",
     "#string\n",
-    "str = \"Hello World\"\n",
+    "str = \"Naufal\"\n",
     "#substring\n",
-    "substr = str[3:5]\n",
+    "substr = str[3:6]\n",
     "#output\n",
     "print(substr)\n",
     "#output: lo"
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HloWrd\n"
+      "Sl\n"
      ]
     }
    ],
@@ -383,11 +383,11 @@
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f\n",
     "\n",
-    "string: \"Hello World\"\n",
+    "string: \"Solo\"\n",
     "        # 0x2x4x6x8x10 skipping characters marked with x\n",
     "# final str: HloWrd\n",
     "#string\n",
-    "str = \"Hello World\"\n",
+    "str = \"Solo\"\n",
     "#skip\n",
     "new_str = str[0::2]\n",
     "print(new_str) #output: HloWrd"
@@ -405,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dlroW olleH\n"
+      "oloS\n"
      ]
     }
    ],
@@ -423,7 +423,7 @@
     "%reset -f\n",
     "\n",
     "#string\n",
-    "str = \"Hello World\"\n",
+    "str = \"Solo\"\n",
     "#reverse\n",
     "result = str[::-1]\n",
     "print(result)"
