--- a/Exercise-06/06_Perulangan.ipynb
+++ b/Exercise-06/06_Perulangan.ipynb
@@ -270,20 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0123456789101112131415161718192021222324252627282930313233343536373839404142"
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 "
      ]
     }
    ],
    "source": [
     "for i in range(50):\n",
-    "    print(i,end='')\n",
+    "    print(\"%d \" % i,end='')\n",
     "    if i == 42:\n",
     "        break"
    ]
