--- a/Exercise-06/06_Perulangan.ipynb
+++ b/Exercise-06/06_Perulangan.ipynb
@@ -59,7 +59,7 @@
     "#melakukan pengulangan\n",
     "i = 3\n",
     "\n",
-    "while i < n :\n",
+    "while i <= n :\n",
     "    print (\"YOLO\")\n",
     "    #diisi motto kalian\n",
     "    i = i + 1 # sesuaikan dengan atas agar fungsi perulangan dapat berhenti\n"
@@ -155,7 +155,7 @@
     "#melakukan pengulangan\n",
     "i = 30\n",
     "\n",
-    "while i > 3 :\n",
+    "while i >= 3 :\n",
     "    print (\"Baris ke-%d : Interstellar\"%i)\n",
     "    #isi titik-titik dengan judul film favorit kalian\n",
     "    i = i - 1 "
