--- a/Exercise-07/07_Fungsi.ipynb
+++ b/Exercise-07/07_Fungsi.ipynb
@@ -19,11 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "umur=  19\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini\n"
+    "#kerjakan disini\n",
+    "cetak = 19\n",
+    "print(\"umur= \", cetak)\n",
+    "#output: umur = 19"
    ]
   },
   {
@@ -41,11 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  79\n",
+      "y =  7\n",
+      "hasil (x+y)=  86\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini!\n"
+    "#Kerjakan disini!\n",
+    "\n",
+    "x= 79\n",
+    "y= 7\n",
+    "print(\"x = \", x)\n",
+    "print(\"y = \", y)\n",
+    "print(\"hasil (x+y)= \", x+y)\n",
+    "\n",
+    "#output:\n",
+    "#x = 79\n",
+    "#y = 7\n",
+    "#hasil (x+y)= 86"
    ]
   },
   {
@@ -63,11 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nama= Ghaylan\n",
+      "tahun= 2021\n",
+      "nama = Naufal Ghaylan\n",
+      "tahun = 21\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "\n",
+    "#variabel global\n",
+    "nama = \"Ghaylan\"\n",
+    "tahun = \"2021\"\n",
+    "\n",
+    "def help():\n",
+    "    #variabel lokal\n",
+    "    nama = \"Naufal Ghaylan\"\n",
+    "    tahun = \"21\"\n",
+    "    print(\"nama = %s\" % nama)\n",
+    "    print(\"tahun = %s\" % tahun)\n",
+    "\n",
+    "print(\"nama= %s\" % nama)\n",
+    "print(\"tahun= %s\" % tahun)\n",
+    "help()"
    ]
   },
   {
@@ -82,11 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=  2.0\n",
+      "y=  9.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import math\n",
+    "def main():\n",
+    "    x = math.sqrt(4)\n",
+    "    y = math.sqrt(81)\n",
+    "    print(\"x= \", x)\n",
+    "    print(\"y= \", y)\n",
+    "main()"
    ]
   },
   {
@@ -102,11 +176,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import time\n",
+    "def countdownTimer(start_minute, start_second):\n",
+    "    total_second = start_minute * 60 + start_second\n",
+    "    while total_second:\n",
+    "        mins, secs = divmod(total_second, 60)\n",
+    "        print(f'{mins:02d}:{secs:02d}', end='\\r')\n",
+    "        time.sleep(1)\n",
+    "        total_second -= 1\n",
+    "def main():\n",
+    "    countdownTimer(0,7)\n",
+    "    print(\"Done!\")\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -121,11 +216,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "def panggil(func):\n",
+    "    return func\n",
+    "def helloworld():\n",
+    "    return \"HELLO WORLD\"\n",
+    "def main():\n",
+    "    s = panggil(helloworld())\n",
+    "    print(s)\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -141,11 +253,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keadaan awal\n",
+      "['Na', 'ufal', 'Gha', 'ylan']\n",
+      "\n",
+      "Menggunakan sorted():\n",
+      "['Gha', 'Na', 'ufal', 'ylan']\n",
+      "\n",
+      "Keadaan akhir:\n",
+      "['Gha', 'Na', 'ufal', 'ylan']\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "def main():\n",
+    "    daftarnama = [\"Na\", \"ufal\", \"Gha\", \"ylan\"]\n",
+    "    print(\"Keadaan awal\")\n",
+    "    print(daftarnama)\n",
+    "\n",
+    "    print(\"\\nMenggunakan sorted():\")\n",
+    "    print(sorted(daftarnama))\n",
+    "\n",
+    "    daftarnama.sort(key=lambda n: n.lower())\n",
+    "\n",
+    "    print(\"\\nKeadaan akhir:\")\n",
+    "    print(daftarnama)\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -161,11 +302,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21! = 51090942171709440000\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import sys\n",
+    "def faktorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * faktorial(n-1)\n",
+    "def main():\n",
+    "    bil = int(input(\"Masukkan bilangan = \"))\n",
+    "    if bil<0:\n",
+    "        print(\"ERROR\")\n",
+    "        sys.exit(1)\n",
+    "    print(\"%d! = %d\" % (bil, faktorial(bil)))\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -177,6 +340,43 @@
     "- Data awal berupa list bulan Januari - Desember dengan huruf awal bervariasi (huruf kapital dan kecil)\n",
     "- Urutkan nama menggunakan **sorted()**\n",
     "- Kemudian urutkan nama sesuai abjad tanpa mepedulikan huruf awal (huruf kapital atau huruf kecil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keadaan Awal\n",
+      "['Juni', 'Desember', 'Maret', 'februari', 'Mei', 'juli', 'januari', 'september', 'November', 'April', 'Oktober']\n",
+      "\n",
+      "Menggunakan sorted():\n",
+      "['April', 'Desember', 'Juni', 'Maret', 'Mei', 'November', 'Oktober', 'februari', 'januari', 'juli', 'september']\n",
+      "\n",
+      "Keadaan Akhir:\n",
+      "['April', 'Desember', 'februari', 'januari', 'juli', 'Juni', 'Maret', 'Mei', 'November', 'Oktober', 'september']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    listbulan = [\"Juni\", \"Desember\", \"Maret\", \"februari\" , \"Mei\", \"juli\", \"januari\", \"september\", \"November\", \"April\", \"Oktober\", ]\n",
+    "    print(\"Keadaan Awal\")\n",
+    "    print(listbulan)\n",
+    " \n",
+    "    print(\"\\nMenggunakan sorted():\")\n",
+    "    print(sorted(listbulan))\n",
+    " \n",
+    "    listbulan.sort(key=lambda n: n.lower())\n",
+    " \n",
+    "    print(\"\\nKeadaan Akhir:\")\n",
+    "    print(listbulan)\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -223,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
